v/0.6.0/_sources/examples/01_deterministic_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/01_deterministic_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_01_deterministic_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_01_deterministic_workflow.py:


Running Deterministic Inference
===============================

Basic deterministic inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
basic determinstic forecast using one of the built in models of Earth-2 Inference
Studio.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Running a simple built in workflow
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 37-42

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, let's take a look at the most basic:
:py:meth:`earth2studio.run.deterministic`.

.. GENERATED FROM PYTHON SOURCE LINES 44-48

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - deterministic start
   :end-before: # sphinx - deterministic end

.. GENERATED FROM PYTHON SOURCE LINES 50-55

Thus, we need the following:

- Prognostic Model: Use the built in FourCastNet Model :py:class:`earth2studio.models.px.FCN`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Let's save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 57-78

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import DLWP

    # Load the default model package which downloads the check point from NGC
    package = DLWP.load_default_package()
    model = DLWP.load_model(package)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    io = ZarrBackend()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-04-15 06:28:28.399 | WARNING  | earth2studio.models.auto.ngc:__init__:110 - API key found but no org found, using the org xznhlxbpr3qw
    Downloading dlwp_cubesphere.zip: 0%|          | 0.00/67.2M [00:00<?, ?B/s]    Downloading dlwp_cubesphere.zip: 19%|█▊        | 12.5M/67.2M [00:00<00:00, 131MB/s]    Downloading dlwp_cubesphere.zip: 81%|████████  | 54.2M/67.2M [00:00<00:00, 310MB/s]    Downloading dlwp_cubesphere.zip: 100%|██████████| 67.2M/67.2M [00:00<00:00, 306MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 79-88

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for two days (these will get executed as a batch) for
20 forecast steps which is 5 days.

.. GENERATED FROM PYTHON SOURCE LINES 90-97

.. code-block:: Python

    import earth2studio.run as run

    nsteps = 20
    io = run.deterministic(["2024-01-01"], nsteps, model, data, io)

    print(io.root.tree())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2025-04-15 06:28:31.443 | INFO     | earth2studio.run:deterministic:75 - Running simple workflow!
    2025-04-15 06:28:31.443 | INFO     | earth2studio.run:deterministic:82 - Inference device: cuda
    2025-04-15 06:28:31.676 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:213 - Fetching GFS index file: 2023-12-31 18:00:00 lead 0:00:00
    Fetching GFS for 2023-12-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2025-04-15 06:28:32.319 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t850 at 2023-12-31 18:00:00_0:00:00
    Fetching GFS for 2023-12-31 18:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching GFS for 2023-12-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:14,  2.50s/it]                                                                                       2025-04-15 06:28:34.819 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z1000 at 2023-12-31 18:00:00_0:00:00
    Fetching GFS for 2023-12-31 18:00:00:  14%|█▍        | 1/7 [00:02<00:14,  2.50s/it]    Fetching GFS for 2023-12-31 18:00:00:  29%|██▊       | 2/7 [00:04<00:10,  2.03s/it]                                                                                       2025-04-15 06:28:36.513 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z700 at 2023-12-31 18:00:00_0:00:00
    Fetching GFS for 2023-12-31 18:00:00:  29%|██▊       | 2/7 [00:04<00:10,  2.03s/it]    Fetching GFS for 2023-12-31 18:00:00:  43%|████▎     | 3/7 [00:05<00:07,  1.79s/it]                                                                                       2025-04-15 06:28:38.019 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z500 at 2023-12-31 18:00:00_0:00:00
    Fetching GFS for 2023-12-31 18:00:00:  43%|████▎     | 3/7 [00:05<00:07,  1.79s/it]    Fetching GFS for 2023-12-31 18:00:00:  57%|█████▋    | 4/7 [00:07<00:05,  1.70s/it]                                                                                       2025-04-15 06:28:39.585 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z300 at 2023-12-31 18:00:00_0:00:00
    Fetching GFS for 2023-12-31 18:00:00:  57%|█████▋    | 4/7 [00:07<00:05,  1.70s/it]    Fetching GFS for 2023-12-31 18:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.64s/it]                                                                                       2025-04-15 06:28:41.108 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: tcwv at 2023-12-31 18:00:00_0:00:00
    Fetching GFS for 2023-12-31 18:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.64s/it]    Fetching GFS for 2023-12-31 18:00:00:  86%|████████▌ | 6/7 [00:10<00:01,  1.58s/it]                                                                                       2025-04-15 06:28:42.578 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t2m at 2023-12-31 18:00:00_0:00:00
    Fetching GFS for 2023-12-31 18:00:00:  86%|████████▌ | 6/7 [00:10<00:01,  1.58s/it]    Fetching GFS for 2023-12-31 18:00:00: 100%|██████████| 7/7 [00:11<00:00,  1.54s/it]    Fetching GFS for 2023-12-31 18:00:00: 100%|██████████| 7/7 [00:11<00:00,  1.67s/it]
    2025-04-15 06:28:44.070 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:213 - Fetching GFS index file: 2024-01-01 00:00:00 lead 0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]                                                                               2025-04-15 06:28:44.290 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t850 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/7 [00:00<?, ?it/s]    Fetching GFS for 2024-01-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:09,  1.64s/it]                                                                                       2025-04-15 06:28:45.928 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z1000 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  14%|█▍        | 1/7 [00:01<00:09,  1.64s/it]    Fetching GFS for 2024-01-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:07,  1.60s/it]                                                                                       2025-04-15 06:28:47.494 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z700 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  29%|██▊       | 2/7 [00:03<00:07,  1.60s/it]    Fetching GFS for 2024-01-01 00:00:00:  43%|████▎     | 3/7 [00:04<00:06,  1.55s/it]                                                                                       2025-04-15 06:28:48.999 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z500 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  43%|████▎     | 3/7 [00:04<00:06,  1.55s/it]    Fetching GFS for 2024-01-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.61s/it]                                                                                       2025-04-15 06:28:50.688 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: z300 at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  57%|█████▋    | 4/7 [00:06<00:04,  1.61s/it]    Fetching GFS for 2024-01-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.64s/it]                                                                                       2025-04-15 06:28:52.379 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: tcwv at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  71%|███████▏  | 5/7 [00:08<00:03,  1.64s/it]    Fetching GFS for 2024-01-01 00:00:00:  86%|████████▌ | 6/7 [00:09<00:01,  1.59s/it]                                                                                       2025-04-15 06:28:53.868 | DEBUG    | earth2studio.data.gfs:_fetch_gfs_dataarray:259 - Fetching GFS grib file for variable: t2m at 2024-01-01 00:00:00_0:00:00
    Fetching GFS for 2024-01-01 00:00:00:  86%|████████▌ | 6/7 [00:09<00:01,  1.59s/it]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 7/7 [00:11<00:00,  1.54s/it]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 7/7 [00:11<00:00,  1.58s/it]
    2025-04-15 06:28:55.419 | SUCCESS  | earth2studio.run:deterministic:106 - Fetched data from GFS
    2025-04-15 06:28:55.423 | WARNING  | earth2studio.io.zarr:add_array:192 - Datetime64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-04-15 06:28:55.427 | WARNING  | earth2studio.io.zarr:add_array:198 - Timedelta64 not supported in zarr 3.0, converting to int64 nanoseconds since epoch
    2025-04-15 06:28:55.455 | INFO     | earth2studio.run:deterministic:136 - Inference starting!
    Running inference:   0%|          | 0/21 [00:00<?, ?it/s]    Running inference:   5%|▍         | 1/21 [00:02<00:43,  2.17s/it]    Running inference:  10%|▉         | 2/21 [00:05<00:49,  2.62s/it]    Running inference:  14%|█▍        | 3/21 [00:07<00:44,  2.50s/it]    Running inference:  19%|█▉        | 4/21 [00:09<00:42,  2.47s/it]    Running inference:  24%|██▍       | 5/21 [00:12<00:39,  2.48s/it]    Running inference:  29%|██▊       | 6/21 [00:15<00:38,  2.56s/it]    Running inference:  33%|███▎      | 7/21 [00:17<00:36,  2.63s/it]    Running inference:  38%|███▊      | 8/21 [00:20<00:34,  2.68s/it]    Running inference:  43%|████▎     | 9/21 [00:23<00:33,  2.77s/it]    Running inference:  48%|████▊     | 10/21 [00:26<00:31,  2.86s/it]    Running inference:  52%|█████▏    | 11/21 [00:29<00:29,  2.95s/it]    Running inference:  57%|█████▋    | 12/21 [00:33<00:27,  3.04s/it]    Running inference:  62%|██████▏   | 13/21 [00:36<00:25,  3.13s/it]    Running inference:  67%|██████▋   | 14/21 [00:39<00:22,  3.23s/it]    Running inference:  71%|███████▏  | 15/21 [00:43<00:19,  3.33s/it]    Running inference:  76%|███████▌  | 16/21 [00:47<00:17,  3.44s/it]    Running inference:  81%|████████  | 17/21 [00:50<00:14,  3.52s/it]    Running inference:  86%|████████▌ | 18/21 [00:54<00:10,  3.64s/it]    Running inference:  90%|█████████ | 19/21 [00:58<00:07,  3.72s/it]    Running inference:  95%|█████████▌| 20/21 [01:02<00:03,  3.81s/it]    Running inference: 100%|██████████| 21/21 [01:06<00:00,  3.92s/it]    Running inference: 100%|██████████| 21/21 [01:06<00:00,  3.18s/it]
    2025-04-15 06:30:02.327 | SUCCESS  | earth2studio.run:deterministic:146 - Inference complete
    /
    ├── lat (721,) float64
    ├── lead_time (21,) int64
    ├── lon (1440,) float64
    ├── t2m (1, 21, 721, 1440) float32
    ├── t850 (1, 21, 721, 1440) float32
    ├── tcwv (1, 21, 721, 1440) float32
    ├── time (1,) int64
    ├── z1000 (1, 21, 721, 1440) float32
    ├── z300 (1, 21, 721, 1440) float32
    ├── z500 (1, 21, 721, 1440) float32
    └── z700 (1, 21, 721, 1440) float32





.. GENERATED FROM PYTHON SOURCE LINES 98-105

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere. Here we will just plot the temperature at 2 meters
(t2m) 1 day into the forecast.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 107-137

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"
    variable = "t2m"
    step = 4  # lead time = 24 hrs

    plt.close("all")
    # Create a Robinson projection
    projection = ccrs.Robinson()

    # Create a figure and axes with the specified projection
    fig, ax = plt.subplots(subplot_kw={"projection": projection}, figsize=(10, 6))

    # Plot the field using pcolormesh
    im = ax.pcolormesh(
        io["lon"][:],
        io["lat"][:],
        io[variable][0, step],
        transform=ccrs.PlateCarree(),
        cmap="Spectral_r",
    )

    # Set title
    ax.set_title(f"{forecast} - Lead time: {6*step}hrs")

    # Add coastlines and gridlines
    ax.coastlines()
    ax.gridlines()
    plt.savefig("outputs/01_t2m_prediction.jpg")



.. image-sg:: /examples/images/sphx_glr_01_deterministic_workflow_001.png
   :alt: 2024-01-01 - Lead time: 24hrs
   :srcset: /examples/images/sphx_glr_01_deterministic_workflow_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (2 minutes 41.128 seconds)


.. _sphx_glr_download_examples_01_deterministic_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 01_deterministic_workflow.ipynb <01_deterministic_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 01_deterministic_workflow.py <01_deterministic_workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 01_deterministic_workflow.zip <01_deterministic_workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
